# PFE

./: exemple.py  job.sbatch  lire_final.py  lire_initial.py  lire_undersampled.py  pyproject.toml  submit-slurm.py  submit_slurm_sample.py
logslurms/: slurm-69635_1.err  slurm-69635_1.out  slurm-69663_1.err  slurm-69663_1.out  slurm-69664_1.err  slurm-69664_1.out  slurm-69667_1.err  slurm-69667_1.out  slurm-69676_1.err  slurm-69676_1.out  slurm-69678_1.err  slurm-69678_1.out  slurm-69679_1.err  slurm-69679_1.out  slurm-69680_1.err  slurm-69680_1.out  slurm-69681_1.err  slurm-69681_1.out  slurm-69682_1.err  slurm-69682_1.out  slurm-69683_1.err  slurm-69683_1.out  slurm-69684_1.err  slurm-69684_1.out  slurm-69697_1.err  slurm-69697_1.out  slurm-69773_1.err  slurm-69773_1.out  slurm-69778_1.err  slurm-69778_1.out  slurm-69780_1.err  slurm-69780_1.out  slurm-69799_1.err  slurm-69799_1.out  slurm-69800_1.err  slurm-69800_1.out  slurm-69802_1.err  slurm-69802_1.out  slurm-69803_1.out  slurm-69804_1.err  (+13 more)
model_multicoil/: log.txt  progress.csv
project/: read_data.py  sample.py  train.py
project/utils/: dist_util.py  fdb.py  load_datasets.py  script_util_duo.py  train_util.py
