[project]
name = "project"
version = "0.0.1"

dependencies = [
    "blobfile>=2.0.2",
    "h5py>=3.9.0",
    "imageio>=2.22.1",
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "mpi4py>=3.1.4",
    "numpy>=1.24.4",
    "Pillow>=10.0.0",
    "fastmri>=0.3.0",
    "PyYAML>=6.0",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "torchinfo>=1.8.0",
    "wandb>=0.16.5",
    "scipy>=1.12.0",
    "tqdm>=4.66.2",
    "accelerate>=0.28.0"

]

[options]
package_dir = "project"